--- a/accueil.html
+++ b/accueil.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Accueil - Art & Bene</title>
-		<link href=".\css\accueil.css" rel="stylesheet" type="text/css">
+		<link href="accueil.css" rel="stylesheet" type="text/css">
 		<script src="https://kit.fontawesome.com/a3b76f0aae.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
