--- a/accueil.html
+++ b/accueil.html
@@ -7,10 +7,10 @@
 	<body>
 
 		<header>
-			<img id=logo src=".\image\logo.png">
+			<img id=logo src="logo.png">
 			<div id="langue">
-				<a href=""><img src=".\image\francais.png"></a>
-				<a href=""><img src=".\image\anglais.png"></a>
+				<a href=""><img src="francais.png"></a>
+				<a href=""><img src="anglais.png"></a>
 			</div>
 		</header>
 		<nav id="navigation">
@@ -21,7 +21,7 @@
 				<a href="contact.html">NOUS CONTACTER</a>
 		</nav>
 		<video muted loop autoplay preload=auto poster="art&bene.jpg">
-		  	<source src=".\video\video.mp4" type="video/mp4">
+		  	<source src="video.mp4" type="video/mp4">
 		</video>
 		<section id="article">
 				<h1>Ebeniste de Luxe</h1>
@@ -33,17 +33,17 @@
 		</section>
 		<main>
 			<aside class="bas">
-				<img src=".\image\raboteuse.png">
+				<img src="raboteuse.png">
 				<h2>Fabrication artisanale</h2>
 				<p>Tout nos meubles sont fabriqués à la main, en France</p>
 			</aside>
 			<aside class="bas">
-				<img src=".\image\wood.png">
+				<img src="wood.png">
 				<h2>Bois massif</h2>
 				<p>Nous travaillons du bois massif provenant de forêts locales</p>
 			</aside>
 			<aside class="bas">
-				<img src=".\image\tree.png">
+				<img src="tree.png">
 				<h2>Environnement</h2>
 				<p>Nous oeuvrons au quotidien pour le respect de l'environnement</p>
 			</aside>
