--- a/quisommesnous.html
+++ b/quisommesnous.html
@@ -1,15 +1,15 @@
 <html>
 	<head>
 		<title>Qui sommes-nous - Art & Bene</title>
-		<link href=".\css\quisommesnous.css" rel="stylesheet" type="text/css">
+		<link href="quisommesnous.css" rel="stylesheet" type="text/css">
 		<script src="https://kit.fontawesome.com/a3b76f0aae.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
-			<img id=logo src=".\image\logo.png">
+			<img id=logo src="logo.png">
 			<div id="langue">
-				<a href=""><img src=".\image\francais.png"></a>
-				<a href=""><img src=".\image\anglais.png"></a>
+				<a href=""><img src="francais.png"></a>
+				<a href=""><img src="anglais.png"></a>
 			</div>
 		</header>
 		<nav id="navigation">
@@ -28,7 +28,7 @@
 		<section>
 			<article id="story">
 				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature. Looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word.
-				<img id=galerie2 src=".\image\ebeniste3.jpg">
+				<img id=galerie2 src="ebeniste3.jpg">
 			</article>
 		</section>
 		<section id="realisation">
@@ -39,24 +39,24 @@
 		</section>
 		<section>
 			<article id="story1">
-				<img id=galerie3 src=".\image\ebeniste2.jpg">
+				<img id=galerie3 src="ebeniste2.jpg">
 				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature.Looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word.
 				
 			</article>
 		</section>
 		<main>
 			<aside class="bas">
-				<img src=".\image\raboteuse.png">
+				<img src="raboteuse.png">
 				<h2>Fabrication artisanale</h2>
 				<p>Tout nos meubles sont fabriqués à la main, en France</p>
 			</aside>
 			<aside class="bas">
-				<img src=".\image\wood.png">
+				<img src="wood.png">
 				<h2>Bois massif</h2>
 				<p>Nous travaillons du bois massif provenant de forêts locales</p>
 			</aside>
 			<aside class="bas">
-				<img src=".\image\tree.png">
+				<img src="tree.png">
 				<h2>Environnement</h2>
 				<p>Nous oeuvrons au quotidien pour le respect de l'environnement</p>
 			</aside>
