--- a/savoirfaire.html
+++ b/savoirfaire.html
@@ -1,15 +1,15 @@
 <html>
 	<head>
 		<title>Savoir-Faire - Art & Bene</title>
-		<link href=".\css\savoirfaire.css" rel="stylesheet" type="text/css">
+		<link href="savoirfaire.css" rel="stylesheet" type="text/css">
 		<script src="https://kit.fontawesome.com/a3b76f0aae.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
-			<img id=logo src=".\image\logo.png">
+			<img id=logo src="logo.png">
 			<div id="langue">
-				<a href=""><img src=".\image\francais.png"></a>
-				<a href=""><img src=".\image\anglais.png"></a>
+				<a href=""><img src="francais.png"></a>
+				<a href=""><img src="anglais.png"></a>
 			</div>
 		</header>
 		<nav id="navigation">
@@ -27,43 +27,43 @@
 		</section>
 		<section id="description">
 				<div class="as">
-					<img src=".\image\lampe.jpg">
+					<img src="lampe.jpg">
 					<a href="lampe.html"><div class=visibility>LAMPE</div></a>
 				</div>
 				<div class="as">
-					<img src=".\image\tablemanger.jpg">
+					<img src="tablemanger.jpg">
 					<a href=tableamanger.html><div class=visibility>TABLE À MANGER</div></a>
 				</div>
 				<div class="as">
-					<img src=".\image\etagere.jpg">
+					<img src="etagere.jpg">
 					<a href="etagere.html"><div class=visibility>ETAGERE</div></a>
 				</div>
 				<div class="as">
-					<img src=".\image\chaise.jpg">
+					<img src="chaise.jpg">
 					<a href="chaise.html"><div class=visibility>CHAISE</div></a>
 				</div>
 				<div class="as">
-					<img src=".\image\meubletv.jpg">
+					<img src="meubletv.jpg">
 					<a href="meubletv.html"><div class=visibility>MEUBLE TV</div></a>
 				</div>
 				<div class="as">
-					<img src=".\image\boutdecanape.jpg">
+					<img src="boutdecanape.jpg">
 					<a href="boutdecanape.html"><div class=visibility>BOUT DE CANAPE</div></a>
 				</div>
 		</section>
 		<main>
 			<aside class="bas">
-				<img src=".\image\raboteuse.png">
+				<img src="raboteuse.png">
 				<h2>Fabrication artisanale</h2>
 				<p>Tout nos meubles sont fabriqués à la main, en France</p>
 			</aside>
 			<aside class="bas">
-				<img src=".\image\wood.png">
+				<img src="wood.png">
 				<h2>Bois massif</h2>
 				<p>Nous travaillons du bois massif provenant de forêts locales</p>
 			</aside>
 			<aside class="bas">
-				<img src=".\image\tree.png">
+				<img src="tree.png">
 				<h2>Environnement</h2>
 				<p>Nous oeuvrons au quotidien pour le respect de l'environnement</p>
 			</aside>
