--- a/tableamanger.html
+++ b/tableamanger.html
@@ -1,15 +1,15 @@
 <html>
 	<head>
 		<title>Table à Manger - Art & Bene</title>
-		<link href=".\css\produit.css" rel="stylesheet" type="text/css">
+		<link href="produit.css" rel="stylesheet" type="text/css">
 		<script src="https://kit.fontawesome.com/a3b76f0aae.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 		<header>
-			<img id=logo src=".\image\logo.png">
+			<img id=logo src="logo.png">
 			<div id="langue">
-				<a href=""><img src=".\image\francais.png"></a>
-				<a href=""><img src=".\image\anglais.png"></a>
+				<a href=""><img src="francais.png"></a>
+				<a href=""><img src="anglais.png"></a>
 			</div>
 		</header>
 		<nav id="navigation">
@@ -26,7 +26,7 @@
 			</article>
 			<article id="fiche">
 				<aside>
-					<img src=".\image\tablemanger.jpg">
+					<img src="tablemanger.jpg">
 				</aside>
 				<aside>
 					<h4>Description du produit</h4>
@@ -37,17 +37,17 @@
 		</section>
 		<main>
 			<aside class="bas">
-				<img src=".\image\raboteuse.png">
+				<img src="raboteuse.png">
 				<h2>Fabrication artisanale</h2>
 				<p>Tout nos meubles sont fabriqués à la main, en France</p>
 			</aside>
 			<aside class="bas">
-				<img src=".\image\wood.png">
+				<img src="wood.png">
 				<h2>Bois massif</h2>
 				<p>Nous travaillons du bois massif provenant de forêts locales</p>
 			</aside>
 			<aside class="bas">
-				<img src=".\image\tree.png">
+				<img src="tree.png">
 				<h2>Environnement</h2>
 				<p>Nous oeuvrons au quotidien pour le respect de l'environnement</p>
 			</aside>
