--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Contact - Art & Bene</title>
-		<link href=contact.css" rel="stylesheet" type="text/css">
+		<link href="contact.css" rel="stylesheet" type="text/css">
 		<script src="https://kit.fontawesome.com/a3b76f0aae.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
